Trying to make a full screen toggle button for the Plotly chart. Not quite there yet, but nearly. References issue #477

--- a/openrem/remapp/templates/remapp/ctfiltered.html
+++ b/openrem/remapp/templates/remapp/ctfiltered.html
@@ -525,6 +525,8 @@
                     <div id="collapseRequestAveDLP" class="panel-collapse collapse">
                         <div id="requestAverageDLPChartParentDiv" class="panel-body">
                             <div id="requestAverageDLPChartDiv"></div>
+                            <a onclick="enterFullScreenPlotly('requestAverageDLPChartParentDiv');"
+                               class="btn btn-default btn-sm" role="button">Toggle fullscreen</a>
                         </div>
                     </div>
                 </div>
